# cyanea

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  mise.toml  mix.exs
.claude/: CLAUDE.md  ROADMAP.md
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js  notebook_worker.js  wasm.js
assets/js/hooks/: alignment_viewer.js  auto_save.js  code_editor.js  index.js  sequence_viewer.js  tree_viewer.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: cyanea_web.ex
lib/cyanea/: accounts.ex  api_tokens.ex  application.ex  billing.ex  blobs.ex  compute.ex  datasets.ex  federation.ex  formats.ex  guardian.ex  mailer.ex  native.ex  notebooks.ex  organizations.ex  protocols.ex  release.ex  repo.ex  repositories.ex  revisions.ex  search.ex  spaces.ex  stars.ex  storage.ex  webhooks.ex
lib/cyanea/accounts/: user.ex  user_notifier.ex  user_token.ex
lib/cyanea_web/: endpoint.ex  formatters.ex  gettext.ex  markdown.ex  notebook_presence.ex  router.ex  telemetry.ex  user_auth.ex
native/cyanea_native/: Cargo.toml
native/cyanea_native/src/: bridge.rs  compress.rs  csv_parser.rs  fasta.rs  hash.rs  io.rs  lib.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/cyanea/: accounts_test.exs  api_tokens_test.exs  billing_test.exs  blobs_test.exs  compute_test.exs  datasets_metadata_test.exs  datasets_test.exs  federation_test.exs  native_test.exs  notebooks_cells_test.exs  notebooks_execution_test.exs  notebooks_test.exs  protocols_structured_test.exs  protocols_test.exs  revisions_test.exs  spaces_test.exs  stars_test.exs  webhooks_test.exs
test/support/: conn_case.ex  data_case.ex
(+154 files in other folders)
