[package]
name = "cyanea_native"
version = "0.1.0"
edition = "2021"
authors = ["Cyanea Team"]
description = "Native Rust extensions for Cyanea"

[lib]
name = "cyanea_native"
crate-type = ["cdylib"]

[dependencies]
# NIF bindings
rustler = "0.34"

# File parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and checksums
sha2 = "0.10"
hex = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Bioinformatics
needletail = "0.5"  # Fast FASTA/FASTQ parsing
bio = "2.0"         # Bioinformatics algorithms

# Async/parallelism
rayon = "1.10"

[profile.release]
lto = true
opt-level = 3
